--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,38 @@
-# CloudHawk AWS Security Detection Tool
-# Core dependencies for AWS security monitoring
+# CloudHawk Multi-Cloud Security Detection Tool
+# Core dependencies for AWS, Azure, and GCP security monitoring
 
 # AWS SDK
 boto3>=1.26.0
 botocore>=1.29.0
 
+# Azure SDK
+azure-identity>=1.12.0
+azure-mgmt-resource>=23.0.0
+azure-mgmt-storage>=21.0.0
+azure-mgmt-compute>=29.0.0
+azure-mgmt-security>=5.0.0
+azure-mgmt-keyvault>=10.0.0
+azure-mgmt-monitor>=5.0.0
+azure-mgmt-authorization>=4.0.0
+azure-mgmt-network>=22.0.0
+azure-mgmt-containerservice>=25.0.0
+
+# GCP SDK
+google-cloud-iam>=2.15.0
+google-cloud-storage>=2.10.0
+google-cloud-compute>=1.12.0
+google-cloud-logging>=3.5.0
+google-cloud-securitycenter>=1.10.0
+google-cloud-asset>=3.12.0
+google-auth>=2.17.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+
 # Data processing
 PyYAML>=6.0
 requests>=2.28.0
 numpy>=1.21.0
+pandas>=1.5.0
 
 # Web framework
 Flask>=2.0.0
