--- a/src/web/email_alert_config.json
+++ b/src/web/email_alert_config.json
@@ -9,10 +9,10 @@
     "enabled": true,
     "smtp_server": "smtp.gmail.com",
     "smtp_port": 587,
-    "username": "vatshariyani16@gmail.com",
-    "password": "grbz aboa arjd ficj",
-    "from_email": "vatshariyani16@gmail.com",
-    "to_email": "vatshariyani28@gmail.com"
+    "username": "",
+    "password": "",
+    "from_email": "",
+    "to_email": ""
   },
   "last_updated": "2025-09-26T22:51:27.857468"
 }
