--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,62 +6,73 @@ services:
     container_name: cloudhawk
     ports:
       - "5000:5000"
-    volumes:
-      - ./config.yaml:/app/config.yaml:ro
-      - ./logs:/app/logs
-      - ./alerts:/app/alerts
-      - ~/.aws:/home/cloudhawk/.aws:ro
     environment:
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-east-1}
-      - FLASK_ENV=${FLASK_ENV:-production}
+      - CLOUDHAWK_PORT=5000
+      - CLOUDHAWK_HOST=0.0.0.0
+      - PYTHONUNBUFFERED=1
+      - FLASK_ENV=production
+    volumes:
+      - cloudhawk_logs:/opt/cloudhawk/logs
+      - cloudhawk_models:/opt/cloudhawk/src/detection/models
+      - cloudhawk_alerts:/opt/cloudhawk/src/alerts
+      - cloudhawk_config:/opt/cloudhawk/config
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/v1/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
     networks:
-      - cloudhawk-network
+      - cloudhawk_network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.cloudhawk.rule=Host(`cloudhawk.local`)"
+      - "traefik.http.services.cloudhawk.loadbalancer.server.port=5000"
 
-  # Optional: Redis for caching (future enhancement)
+  # Optional: Redis for caching and session management
   redis:
     image: redis:7-alpine
-    container_name: cloudhawk-redis
+    container_name: cloudhawk_redis
     ports:
       - "6379:6379"
     volumes:
-      - redis-data:/data
+      - cloudhawk_redis:/data
     restart: unless-stopped
     networks:
-      - cloudhawk-network
-    profiles:
-      - cache
+      - cloudhawk_network
+    command: redis-server --appendonly yes
 
-  # Optional: PostgreSQL for persistent storage (future enhancement)
+  # Optional: PostgreSQL for persistent data storage
   postgres:
     image: postgres:15-alpine
-    container_name: cloudhawk-postgres
+    container_name: cloudhawk_postgres
     environment:
       - POSTGRES_DB=cloudhawk
       - POSTGRES_USER=cloudhawk
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-cloudhawk123}
+      - POSTGRES_PASSWORD=cloudhawk_secure_password
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - cloudhawk_postgres:/var/lib/postgresql/data
     restart: unless-stopped
     networks:
-      - cloudhawk-network
-    profiles:
-      - database
+      - cloudhawk_network
 
 volumes:
-  redis-data:
-  postgres-data:
+  cloudhawk_logs:
+    driver: local
+  cloudhawk_models:
+    driver: local
+  cloudhawk_alerts:
+    driver: local
+  cloudhawk_config:
+    driver: local
+  cloudhawk_redis:
+    driver: local
+  cloudhawk_postgres:
+    driver: local
 
 networks:
-  cloudhawk-network:
+  cloudhawk_network:
     driver: bridge
