--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,6 +50,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
+        file: ./deployment/Dockerfile
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
